components/uic_attribute_store/include/attribute_store.h

typedef uint32_t attribute_store_type_t;
/**
 * @defgroup attribute_store Attribute Store
 * @ingroup unify_components
 * @brief Attribute store.
 *
 * The Attribute store is a tree of attributes stored to save the state
 * of an object in the current network/environment.
 *
 * The attribute store is a directed acyclic graph, where there is
 * a root node under which all other nodes will have 1 parent and
 * a number of children.
 *
 * A tree node is identified by an @ref attribute_store_node_t handle
 * Each node has a type, defined by its @ref attribute_store_type_t type.
 *
 * This indicates what the value represents.
 * There are no restrictions regarding which node (type) is a parent or
 * a child.
 *
 * Each node has one or more value states, defined by
 * @ref attribute_store_node_value_state_t.
 * Each value state (REPORTED/DESIRED) contains a value of
 * variable length that can be read and written.
 * Nodes created have, by default, unassigned values in each of their
 * value state. In this case, the value length is set to 0.
 *
 * Finally, an example of attribute store tree organization is shown
 * in the image below.
 * Some Attribute IDs are color-coded for readability
 * and they do not represent any difference between nodes apart from
 * their attribute type value.
 * \image html attribute_store_example_representation.png "Attribute store tree example"
 *
 */

/**
 * @defgroup attribute_store_api Attribute Store Public Interface
 * @ingroup attribute_store
 * @brief Public functions from the attribute store.
 * It allows other components to manipulate the @ref attribute_store tree.
 * and register callbacks for @ref attribute_store updates.
 *
 * @{
 */

/**
 * @brief Handle to identify attribute store nodes
 */
//typedef void *attribute_store_node_t;
typedef datastore_attribute_id_t attribute_store_node_t;
/// Special attribute_store_node_t value indicating that it does not exist.
#define ATTRIBUTE_STORE_INVALID_NODE (attribute_store_node_t)0
/**
 * @brief This is the value state of a value.
 */
typedef enum {
  REPORTED_ATTRIBUTE,  ///< This is the value reported by the node or actual value.
  DESIRED_ATTRIBUTE,  ///< This is the value to be applied to the node.
  DESIRED_OR_REPORTED_ATTRIBUTE,  ///< Retrieve the desired value if it exists if not then provide the reported attribute only used for readding.
} attribute_store_node_value_state_t;
/**
 * @brief Attribute store callback type for tree node updates
 */
typedef void (*attribute_store_node_changed_callback_t)(
  attribute_store_node_t, attribute_store_change_t);
/**
 * @brief structure that contains information about the current state
 * of a given node in the attribute store.
 */
typedef struct attribute_changed_event {
  attribute_store_node_t updated_node;
  attribute_store_type_t type;
  attribute_store_node_value_state_t value_state;
  attribute_store_change_t change;
} attribute_changed_event_t;
/**
 * @brief Attribute store callback type for tree node updates
 */
typedef void (*attribute_store_node_update_callback_t)(
  attribute_changed_event_t *event_data);
/**
 * @brief Set the attribute value of a node in the current attribute store tree.
 *
 * @param node        The node handle for which the value
 *                    must be updated.
 * @param value_state The attribute_store_node_value_state_t
 *                    value state to write for the node.
 *                    (Desired or Reported)
 * @param value       A uint8_t pointer to an array containing
 *                    the data to be written for the node. This array
 *                    may contain up to 255 bytes.
 * @param value_size  The number of bytes to read from the value pointer.
 *
 * @returns SL_STATUS_OK         If the tree node value has been set correctly.
 * @returns SL_STATUS_FAIL       If the value state is not understood.
 * @returns SL_STATUS_NOT_INITIALIZED if the attribute store is not initialized
 *                                    properly
 */
sl_status_t attribute_store_set_node_attribute_value(
  attribute_store_node_t node,
  attribute_store_node_value_state_t value_state,
  const uint8_t *value,
  uint8_t value_size);
/**
 * @brief Get the node handle of a child of a node with a certain type and value.
 *
 * @param node          The node handle of the node for which
 *                      the child identifier will be written
 * @param child_type    The attribute type of the child.
 * @param value_state   The attribute_store_node_value_state_t
 *                      value state to compare for the child.
 *                      (Desired or Reported)
 * @param value         A uint8_t pointer to an array for which the
 *                      value/value state will be compared.
 * @param value_size    The number of bytes to compare from the
 *                      value pointer.
 * @param child_index   Value to indicate which child to find.
 *                      0 will match the first child (with that type and value),
 *                      1 the second child (with that type and value), etc.
 * @returns attribute_store_node_t handle for the child node at the indicated index
 *                                 with the type and value.
 * @returns ATTRIBUTE_STORE_INVALID_NODE if the child index does not exist.
 *          (i.e. there are less children with that type and value than the
 *          child index). or if node itself does not exist
 *
 */
attribute_store_node_t attribute_store_get_node_child_by_value(
  attribute_store_node_t node,
  attribute_store_type_t child_type,
  attribute_store_node_value_state_t value_state,
  const uint8_t *value,
  uint8_t value_size,
  uint32_t child_index);
/**
 * @brief Register a callback function to any node change.
 *
 * WARNING: Do not use this function, unless you are a component
 * that really wants to know about almost all updates in the attribute
 * store. See \ref attribute_store_register_callback_by_type and
 * \ref attribute_store_register_callback_by_type_and_state
 *
 * @param callback_function The function to invoke when the node's
 *                          value is updated.
 * @returns SL_STATUS_OK    If the callback was registered successfully.
 */
sl_status_t attribute_store_register_callback(
  attribute_store_node_update_callback_t callback_function);
/**
 * @brief Register a callback function to any node with a given type.
 *
 * @param callback_function The function to invoke when the node's
 *                          value is updated.
 * @param type              The attribute node type for which a
 *                          callback will be registered.
 * @returns SL_STATUS_OK    If the callback was registered successfully.
 */
sl_status_t attribute_store_register_callback_by_type(
  attribute_store_node_changed_callback_t callback_function,
  attribute_store_type_t type);
/**
 * @brief Register a callback function to any node with a given
 * type for a given value_state update
 *
 * @param callback_function The function to invoke when the node's
 *                          value is updated.
 * @param type              The attribute node type for which a
 *                          callback will be registered.
 * @param value_state       The value-state that will trigger a
 *                          callback when it's modified.
 * @returns SL_STATUS_OK    If the callback was registered successfully.
 */
sl_status_t attribute_store_register_callback_by_type_and_state(
  attribute_store_node_changed_callback_t callback_function,
  attribute_store_type_t type,
  attribute_store_node_value_state_t value_state);
/**
 * @brief Verify whether a node is in the Attribute Store.
 *
 * @param   node  The identifier of the node to verify if
 *                it is present in the Attribute Store
 * @returns true  if the Node ID is in the Attribute Store
 * @returns false if the Node ID is in the Attribute Store
 */
bool attribute_store_node_exists(attribute_store_node_t node);
/**
 * @brief Invoking update of callbacks for the given node and all children nodes
 *
 * WARNING: Callbacks registered by DESIRED_ATTRIBUTE or
 * DESIRED_OR_REPORTED_ATTRIBUTE will not be invoked.
 *
 * @param   node  The identifier of the node to update
 *                and all its children
 *
 * @returns SL_STATUS_OK if all nodes callbacks was successfully updated
 * @returns SL_STATUS_FAIL if invoking update callbacks on any node fails
 */
sl_status_t attribute_store_refresh_node_and_children_callbacks(
  attribute_store_node_t node);
/**
 * @brief Log the content of the Attribute Store tree using \ref sl_log.
*/
void attribute_store_log(void);
/**
 * @brief Log the content of the Attribute Store tree using \ref sl_log
 * from a given node.
 * @param node          The node handle of the node for which the tree
 *                      will be printed out.
 * @param log_children  bool value indicating if children should be
 *                      printed out as well.
*/
void attribute_store_log_node(attribute_store_node_t node, bool log_children);