components/uic_attribute_store/include/attribute_store_helper.h

/**
 * @brief Indicate whether a value is defined in the attribute store.
 *
 * @param node        The Attribute store node under
 *                    which the value must be retrieved
 * @param value_state The value_state to retrieve
 *
 * @returns true  If the value is defined (its size > 0)
 * @returns false If the value is undefined (its size == 0)
 */
bool attribute_store_is_value_defined(
  attribute_store_node_t node, attribute_store_node_value_state_t value_state);
/**
 * @brief Indicate whether reported and desired values are matched in the attribute store.
 *
 * @param node        The Attribute store node under
 *                    which the value must be retrieved
 *
 * @returns true  If the values are matched
 * @returns false If the value are unmatched
 */
bool attribute_store_is_value_matched(attribute_store_node_t node);
/**
 * @brief Set the Desired value to the same as the Reported value.
 *
 * @param node        The Attribute store node for which DESIRED
 *                    must be aligned to REPORTED
 *
 * @returns sl_status_t
 */
sl_status_t
  attribute_store_set_desired_as_reported(attribute_store_node_t node);
/**
 * @brief Set the Reported value to the same as the Desired value.
 *
 * @param node        The Attribute store node for which REPORTED
 *                    must be aligned to DESIRED
 *
 * @returns sl_status_t
 */
sl_status_t
  attribute_store_set_reported_as_desired(attribute_store_node_t node);
/**
 * @brief Set the Reported value to "undefined" (0 size no value)
 *
 * @param node        The Attribute store node for which REPORTED
 *                    must be set to nothing
 */
void attribute_store_undefine_reported(attribute_store_node_t node);
/**
 * @brief Set the Reported value of an Attribute Store node
 *
 * @param node        The Attribute store node for which REPORTED
 *                    must be updated
 * @param value       A pointer to a variable containing
 *                    the data to be written for the node.
 * @param value_size  The number of bytes to read from the value pointer.
 *
 * @returns sl_status_t returned by @ref attribute_store_set_node_attribute_value
 */
sl_status_t attribute_store_set_reported(attribute_store_node_t node,
                                         const void *value,
                                         uint8_t value_size);
/**
 * @brief Reads the reported value of an attribute store node
 *
 * @param node          The Attribute store node under
 *                      which the value must be retrieved
 * @param value         Pointer where to copy the value
 * @param expected_size  The size of the pointer of read_value
 *
 * @returns SL_STATUS_OK    if the read value has the expected size and
 *                          has been copied to the pointer.
 * @returns SL_STATUS_FAIL  if the value is undefined, has not the expected
 *                          size or has not been copied to the pointer.
 */
sl_status_t attribute_store_get_reported(attribute_store_node_t node,
                                         void *value,
                                         size_t expected_size);
/**
 * @brief Visit all nodes in the tree.
 *
 * This function visits all tree nodes going from the top and down.
 * It will continue to the node children if the status returned by
 * the function is SL_STATUS_OK. If the function returns SL_STATUS_ABORT,
 * no more nodes are visited. Otherwise, siblings will be visited.
 *
 * @param top First node to be visited
 * @param func function to execute
 * @param depth The current depth of the top node.
 */
sl_status_t
  attribute_store_walk_tree(attribute_store_node_t top,
                            sl_status_t (*func)(attribute_store_node_t, int),
                            int depth);