components/uic_rust/uic_attribute_store_rs/src/uic_attribute_store_bindings.rs

extern "C" {
    #[doc = " @brief Get the node handle of a child of a node with a certain type and value."]
    #[doc = ""]
    #[doc = " @param node          The node handle of the node for which"]
    #[doc = "                      the child identifier will be written"]
    #[doc = " @param child_type    The attribute type of the child."]
    #[doc = " @param value_state   The attribute_store_node_value_state_t"]
    #[doc = "                      value state to compare for the child."]
    #[doc = "                      (Desired or Reported)"]
    #[doc = " @param value         A uint8_t pointer to an array for which the"]
    #[doc = "                      value/value state will be compared."]
    #[doc = " @param value_size    The number of bytes to compare from the"]
    #[doc = "                      value pointer."]
    #[doc = " @param child_index   Value to indicate which child to find."]
    #[doc = "                      0 will match the first child (with that type and value),"]
    #[doc = "                      1 the second child (with that type and value), etc."]
    #[doc = " @returns attribute_store_node_t handle for the child node at the indicated index"]
    #[doc = "                                 with the type and value."]
    #[doc = " @returns ATTRIBUTE_STORE_INVALID_NODE if the child index does not exist."]
    #[doc = "          (i.e. there are less children with that type and value than the"]
    #[doc = "          child index). or if node itself does not exist"]
    #[doc = ""]
    pub fn attribute_store_get_node_child_by_value(
        node: attribute_store_node_t,
        child_type: attribute_store_type_t,
        value_state: attribute_store_node_value_state_t,
        value: *const u8,
        value_size: u8,
        child_index: u32,
    ) -> attribute_store_node_t;
}
extern "C" {
    #[doc = " @brief Register a callback function to any node change."]
    #[doc = ""]
    #[doc = " WARNING: Do not use this function, unless you are a component"]
    #[doc = " that really wants to know about almost all updates in the attribute"]
    #[doc = " store. See \\ref attribute_store_register_callback_by_type and"]
    #[doc = " \\ref attribute_store_register_callback_by_type_and_state"]
    #[doc = ""]
    #[doc = " @param callback_function The function to invoke when the node's"]
    #[doc = "                          value is updated."]
    #[doc = " @returns SL_STATUS_OK    If the callback was registered successfully."]
    pub fn attribute_store_register_callback(
        callback_function: attribute_store_node_update_callback_t,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Register a callback function to any node with a given type."]
    #[doc = ""]
    #[doc = " @param callback_function The function to invoke when the node's"]
    #[doc = "                          value is updated."]
    #[doc = " @param type              The attribute node type for which a"]
    #[doc = "                          callback will be registered."]
    #[doc = " @returns SL_STATUS_OK    If the callback was registered successfully."]
    pub fn attribute_store_register_callback_by_type(
        callback_function: attribute_store_node_update_callback_t,
        type_: attribute_store_type_t,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Register a callback function to any node with a given"]
    #[doc = " type for a given value_state update"]
    #[doc = ""]
    #[doc = " @param callback_function The function to invoke when the node's"]
    #[doc = "                          value is updated."]
    #[doc = " @param type              The attribute node type for which a"]
    #[doc = "                          callback will be registered."]
    #[doc = " @param value_state       The value-state that will trigger a"]
    #[doc = "                          callback when it's modified."]
    #[doc = " @returns SL_STATUS_OK    If the callback was registered successfully."]
    pub fn attribute_store_register_callback_by_type_and_state(
        callback_function: attribute_store_node_update_callback_t,
        type_: attribute_store_type_t,
        value_state: attribute_store_node_value_state_t,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Verify whether a node is in the Attribute Store."]
    #[doc = ""]
    #[doc = " @param   node  The identifier of the node to verify if"]
    #[doc = "                it is present in the Attribute Store"]
    #[doc = " @returns true  if the Node ID is in the Attribute Store"]
    #[doc = " @returns false if the Node ID is in the Attribute Store"]
    pub fn attribute_store_node_exists(node: attribute_store_node_t) -> bool;
}
extern "C" {
    #[doc = " @brief Invoking update of callbacks for the given node and all children nodes"]
    #[doc = ""]
    #[doc = " WARNING: Callbacks registered by DESIRED_ATTRIBUTE or"]
    #[doc = " DESIRED_OR_REPORTED_ATTRIBUTE will not be invoked."]
    #[doc = ""]
    #[doc = " @param   node  The identifier of the node to update"]
    #[doc = "                and all its children"]
    #[doc = ""]
    #[doc = " @returns SL_STATUS_OK if all nodes callbacks was successfully updated"]
    #[doc = " @returns SL_STATUS_FAIL if invoking update callbacks on any node fails"]
    pub fn attribute_store_refresh_node_and_children_callbacks(
        node: attribute_store_node_t,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Log the content of the Attribute Store tree using \\ref sl_log."]
    pub fn attribute_store_log();
}
extern "C" {
    #[doc = " @brief Log the content of the Attribute Store tree using \\ref sl_log"]
    #[doc = " from a given node."]
    #[doc = " @param node          The node handle of the node for which the tree"]
    #[doc = "                      will be printed out."]
    #[doc = " @param log_children  bool value indicating if children should be"]
    #[doc = "                      printed out as well."]
    pub fn attribute_store_log_node(node: attribute_store_node_t, log_children: bool);
}
extern "C" {
    #[doc = " @brief Register a name for a attribute typid."]
    #[doc = ""]
    #[doc = " @param id"]
    #[doc = " @param name"]
    pub fn attribute_store_register_attribute(
        id: attribute_store_type_t,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    #[doc = " @brief Get the type name of an attribute"]
    #[doc = ""]
    #[doc = " @param id"]
    #[doc = " @return const char* Name"]
    pub fn attribute_store_name_by_type(
        id: attribute_store_type_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " @brief Lookup the type of an attribute by its name"]
    #[doc = ""]
    #[doc = " @param name Name to look up"]
    #[doc = " @return attribute_store_type_t resulting type, if name is not found 0xffffffff is returned."]
    pub fn attribute_store_type_by_name(
        name: *const ::std::os::raw::c_char,
    ) -> attribute_store_type_t;
}
extern "C" {
    #[doc = " @brief Initialize the Attribute store."]
    #[doc = ""]
    #[doc = " This component depends on the following components:"]
    #[doc = " - @ref sl_log"]
    #[doc = " - @ref datastore"]
    #[doc = ""]
    #[doc = " @returns SL_STATUS_OK on success"]
    #[doc = " @returns SL_STATUS_FAIL on failure"]
    pub fn attribute_store_init() -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Clears up the Attribute Store from all its content."]
    #[doc = ""]
    #[doc = " @returns 0 on success"]
    pub fn attribute_store_teardown() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Indicate whether a value is defined in the attribute store."]
    #[doc = ""]
    #[doc = " @param node        The Attribute store node under"]
    #[doc = "                    which the value must be retrieved"]
    #[doc = " @param value_state The value_state to retrieve"]
    #[doc = ""]
    #[doc = " @returns true  If the value is defined (its size > 0)"]
    #[doc = " @returns false If the value is undefined (its size == 0)"]
    pub fn attribute_store_is_value_defined(
        node: attribute_store_node_t,
        value_state: attribute_store_node_value_state_t,
    ) -> bool;
}
extern "C" {
    #[doc = " @brief Indicate whether reported and desired values are matched in the attribute store."]
    #[doc = ""]
    #[doc = " @param node        The Attribute store node under"]
    #[doc = "                    which the value must be retrieved"]
    #[doc = ""]
    #[doc = " @returns true  If the values are matched"]
    #[doc = " @returns false If the value are unmatched"]
    pub fn attribute_store_is_value_matched(node: attribute_store_node_t) -> bool;
}
extern "C" {
    #[doc = " @brief Set the Desired value to the same as the Reported value."]
    #[doc = ""]
    #[doc = " @param node        The Attribute store node for which DESIRED"]
    #[doc = "                    must be aligned to REPORTED"]
    #[doc = ""]
    #[doc = " @returns sl_status_t"]
    pub fn attribute_store_set_desired_as_reported(node: attribute_store_node_t) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Set the Reported value to the same as the Desired value."]
    #[doc = ""]
    #[doc = " @param node        The Attribute store node for which REPORTED"]
    #[doc = "                    must be aligned to DESIRED"]
    #[doc = ""]
    #[doc = " @returns sl_status_t"]
    pub fn attribute_store_set_reported_as_desired(node: attribute_store_node_t) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Set the Reported value to \"undefined\" (0 size no value)"]
    #[doc = ""]
    #[doc = " @param node        The Attribute store node for which REPORTED"]
    #[doc = "                    must be set to nothing"]
    pub fn attribute_store_undefine_reported(node: attribute_store_node_t);
}
extern "C" {
    #[doc = " @brief Set the Reported value of an Attribute Store node"]
    #[doc = ""]
    #[doc = " @param node        The Attribute store node for which REPORTED"]
    #[doc = "                    must be updated"]
    #[doc = " @param value       A pointer to a variable containing"]
    #[doc = "                    the data to be written for the node."]
    #[doc = " @param value_size  The number of bytes to read from the value pointer."]
    #[doc = ""]
    #[doc = " @returns sl_status_t returned by @ref attribute_store_set_node_attribute_value"]
    pub fn attribute_store_set_reported(
        node: attribute_store_node_t,
        value: *const ::std::os::raw::c_void,
        value_size: u8,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Reads the reported value of an attribute store node"]
    #[doc = ""]
    #[doc = " @param node          The Attribute store node under"]
    #[doc = "                      which the value must be retrieved"]
    #[doc = " @param value         Pointer where to copy the value"]
    #[doc = " @param expected_size  The size of the pointer of read_value"]
    #[doc = ""]
    #[doc = " @returns SL_STATUS_OK    if the read value has the expected size and"]
    #[doc = "                          has been copied to the pointer."]
    #[doc = " @returns SL_STATUS_FAIL  if the value is undefined, has not the expected"]
    #[doc = "                          size or has not been copied to the pointer."]
    pub fn attribute_store_get_reported(
        node: attribute_store_node_t,
        value: *mut ::std::os::raw::c_void,
        expected_size: size_t,
    ) -> sl_status_t;
}
